--- a/app/src/main/res/drawable/bg_fb_button.xml
+++ b/app/src/main/res/drawable/bg_fb_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grey_light"></solid>
-    <corners android:radius="35dp"></corners>
+    <solid android:color="@color/grey_light" />
+    <corners android:radius="@dimen/default_margin" />
 
 </shape>
