--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
 
             android:background="@null"
-            android:theme="@style/MyTitle"
+            android:theme="@style/TitleStyle"
 
             android:text="@string/sign_in"
             />
@@ -40,17 +40,14 @@
                 android:text="@string/go_sign_in"
                 android:textSize="14sp" />
 
-
         </LinearLayout>
-
 
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailLayout"
             style="@style/InputLayoutStyle"
-            app:hintEnabled="true"
-            android:hint="@string/email"
-            android:layout_margin="@dimen/default_big">
+
+            android:hint="@string/email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
@@ -61,7 +58,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/fullNameLayout"
             style="@style/InputLayoutStyle"
-            app:hintEnabled="true"
+
             android:layout_margin="@dimen/default_big"
             >
 
@@ -117,7 +114,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/sign_up"
-            style="@style/MyButtonStyle"
+            style="@style/ButtonStyle"
             android:text="@string/sign_up"
            />
 
