--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="small_padding">6dp</dimen>
     <dimen name="normal_padding">8dp</dimen>
     <dimen name="normal_size_text">14sp</dimen>
+    <dimen name="zero">0dp</dimen>
 </resources>
