--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.MainActivity"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".view.MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView"
-            style="@style/TitleStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/default_big"
+            style="@style/TextViewTitleStyle"
             android:text="@string/sign_in" />
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailLayout"
             style="@style/InputLayoutStyle"
-            android:hint="@string/email"
-            android:background="@drawable/bg_input">
+            android:background="@drawable/bg_input"
+            android:hint="@string/email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 style="@style/InputStyle"
-
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,30 +32,32 @@
             android:id="@+id/passLayout"
             style="@style/InputLayoutStyle"
             app:passwordToggleEnabled="true">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
                 style="@style/InputStyle"
                 android:hint="@string/password"
                 android:inputType="textWebPassword" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:orientation="horizontal">
+
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/checkBox"
-                android:text="@string/remember_me"
-                android:buttonTint="@color/blue"
                 style="@style/CheckBoxBlue"
-              />
+                android:buttonTint="@color/blue"
+                android:text="@string/remember_me" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
                 android:layout_gravity="center_vertical"
+                android:gravity="end"
                 android:text="@string/forget_password"
                 android:textColor="#2196F3" />
         </LinearLayout>
@@ -68,8 +65,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/sign_in"
             style="@style/ButtonStyle"
-            android:text="@string/sign_in"
-        />
+            android:text="@string/sign_in" />
 
         <TextView
             android:id="@+id/textview3"
@@ -87,10 +83,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="@dimen/normal_padding"
-
             >
-
-
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
@@ -98,19 +91,17 @@
                 android:layout_gravity="center"
                 android:drawablePadding="@dimen/small_padding"
                 android:padding="@dimen/small_padding"
-                android:text="Facebook"
+                android:text="@string/facebook"
                 app:drawableStartCompat="@drawable/ic_icon_fb" />
 
         </LinearLayout>
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_big"
             android:gravity="center"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/requiredActivityTextView"
@@ -118,11 +109,8 @@
                 android:layout_height="match_parent"
                 android:text="@string/go_sign_in"
                 android:textSize="@dimen/normal_size_text" />
-
-
         </LinearLayout>
-
-
     </LinearLayout>
+
 </ScrollView>
 
