--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,37 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.RegisterActivity"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".view.RegisterActivity">
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         tools:context=".view.MainActivity">
 
         <TextView
             android:id="@+id/textView"
-
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:background="@null"
-            android:theme="@style/TitleStyle"
-
-            android:text="@string/sign_in"
-            />
+            style="@style/TextViewTitleStyle"
+            android:text="@string/sign_up" />
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_big"
             android:gravity="center"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/requiredActivityTextView"
@@ -39,7 +30,6 @@
                 android:layout_height="match_parent"
                 android:text="@string/go_sign_in"
                 android:textSize="14sp" />
-
         </LinearLayout>
 
 
@@ -59,8 +49,7 @@
             android:id="@+id/fullNameLayout"
             style="@style/InputLayoutStyle"
 
-            android:layout_margin="@dimen/default_big"
-            >
+            android:layout_margin="@dimen/default_big">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/fullName"
@@ -68,12 +57,13 @@
                 android:hint="@string/full_name"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usernameLayout"
             style="@style/InputLayoutStyle"
-            app:hintEnabled="true"
+            android:layout_margin="@dimen/default_big"
             android:hint="@string/username"
-            android:layout_margin="@dimen/default_big">
+            app:hintEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/username"
@@ -96,28 +86,22 @@
                 android:inputType="textWebPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_big"
-
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/checkBox"
                 style="@style/CheckBoxBlue"
-                android:imeOptions="actionDone"
-                />
+                android:imeOptions="actionDone" />
 
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/sign_up"
             style="@style/ButtonStyle"
-            android:text="@string/sign_up"
-           />
-
-
+            android:text="@string/sign_up" />
     </LinearLayout>
 </ScrollView>
