--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,60 +6,58 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
-
-
         <TextView
             android:id="@+id/name_def"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextViewArgumentBoldStyle"
             android:text="@string/name" />
-
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/TextViewArgumentStyle"
             android:hint="@string/name"
              />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:weightSum="1"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/email_def"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
+            style="@style/TextViewArgumentBoldStyle"
+            android:layout_weight="0.5"
+            android:gravity="end"
             android:text="@string/email" />
 
         <TextView
             android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/email"
-            />
+            style="@style/TextViewArgumentStyle"
+            android:layout_weight="0.5"
+            android:hint="@string/email" />
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:gravity="center"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/log_def"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
+            style="@style/TextViewArgumentBoldStyle"
             android:text="@string/login" />
 
         <TextView
             android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
+            style="@style/TextViewArgumentStyle"
             android:hint="@string/login"
             />
     </androidx.appcompat.widget.LinearLayoutCompat>
