--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="yellow">#DAC408</color>
+    <color name="orange">#FF9800</color>
     <color name="red">#ED1C0D</color>
     <color name="grey">#67676A</color>
     <color name="grey_light">#C8C8CF</color>
@@ -11,4 +13,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#2196F3</color>
+    <color name="blue_light">#03A9F4</color>
+
 </resources>
