--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="normal_padding">8dp</dimen>
     <dimen name="normal_size_text">14sp</dimen>
     <dimen name="title_size_sp">24sp</dimen>
+    <dimen name="small_stroke_size">4dp</dimen>
     <dimen name="zero">0dp</dimen>
 </resources>
