--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -57,7 +57,6 @@
         <item name="android:layout_margin">@dimen/default_big</item>
         <item name="errorTextColor">@color/red</item>
         <item name="errorEnabled">false</item>
-
         <item name="hintTextColor">@color/grey</item>
         <item name="boxCornerRadiusBottomEnd">@dimen/default_big</item>
         <item name="boxCornerRadiusBottomStart">@dimen/default_big</item>
@@ -86,7 +85,7 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/default_big</item>
-        <item name="android:background">@drawable/bg_selector_button</item>
+        <item name="android:background">@drawable/bg_sign_button</item>
     </style>
 
     <style name="HintStyle" parent="TextAppearance.AppCompat">
