--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -20,8 +20,6 @@
             android:hint="@string/name"
              />
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,7 +59,7 @@
             android:hint="@string/login" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/log_out"
         style="@style/ButtonStyle"
         android:text="@string/log_out" />
