Navigation Component implemented fully  ,added RxJava components while fetching data from WeatherApi  and all implemented in MVP structure

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.narcyber.mvpbasics.view.fragments.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_weatherActivity"
+            app:destination="@id/weatherActivity" />
+    </fragment>
     <fragment
         android:id="@+id/userPersonalFragment"
         android:name="com.narcyber.mvpbasics.view.fragments.UserPersonalFragment"
@@ -25,4 +29,13 @@
         android:name="com.narcyber.mvpbasics.view.fragments.FavouriteFragment"
         android:label="fragment_favourite"
         tools:layout="@layout/fragment_favourite" />
+    <activity
+        android:id="@+id/weatherActivity"
+        android:name="com.narcyber.mvpbasics.view.WeatherActivity"
+        android:label="WeatherActivity">
+        <argument
+            android:name="city_weather"
+            android:defaultValue=""
+            app:argType="string" />
+    </activity>
 </navigation>
