--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 style="@style/InputStyle"
+                android:imeOptions="actionNext"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,6 +38,7 @@
                 android:id="@+id/password"
                 style="@style/InputStyle"
                 android:hint="@string/password"
+                android:imeOptions="actionDone"
                 android:inputType="textWebPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
