added Room Db and also add allUsers to check all users inside app  and more

--- a/app/src/main/res/layout/fragment_user_personal.xml
+++ b/app/src/main/res/layout/fragment_user_personal.xml
@@ -64,4 +64,10 @@
         style="@style/ButtonStyle"
         android:text="@string/log_out" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/all_users"
+        style="@style/ButtonStyle"
+        android:text="@string/all_users" />
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
