migrated to kotlin

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -95,6 +95,7 @@
             <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/checkBox"
                 style="@style/CheckBoxBlue"
+                android:text="@string/accept_terms_please"
                 android:imeOptions="actionDone" />
 
         </LinearLayout>
