migrated to kotlin backup

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -58,4 +58,24 @@
             android:name="userName"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.narcyber.mvpbasics.view.fragments.SearchFragment"
+        android:label="SearchFragment">
+
+        <action
+            android:id="@+id/action_searchFragment_to_airlinesVTwoFragment"
+            app:destination="@id/airlinesVTwoFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_airlinesVOneFragment"
+            app:destination="@id/airlinesVOneFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/airlinesVOneFragment"
+        android:name="com.narcyber.mvpbasics.view.fragments.airline_fragments.AirlinesVOneFragment"
+        android:label="AirlinesVOneFragment" />
+    <fragment
+        android:id="@+id/airlinesVTwoFragment"
+        android:name="com.narcyber.mvpbasics.view.fragments.airline_fragments.AirlinesVTwoFragment"
+        android:label="AirlinesVTwoFragment" />
 </navigation>
