--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -7,6 +7,13 @@
         android:title="@string/home"
         android:menuCategory="secondary"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/searchFragment"
+        android:icon="@drawable/bg_selector"
+        android:menuCategory="secondary"
+        android:title="@string/home"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/favouriteFragment"
         android:icon="@drawable/ic_baseline_star_24"
